--- a/automation_script/Dockerfile
+++ b/automation_script/Dockerfile
@@ -10,8 +10,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application files
 COPY . .
 
-# Create data directory
-RUN mkdir -p /app/data
+# Create data directories with sample files from the repo
+RUN mkdir -p /app/data/BOQ /app/data/Sizing /app/data/SLD
 
 # Expose port
 EXPOSE 8080
@@ -19,6 +19,7 @@ EXPOSE 8080
 # Set environment variables
 ENV PYTHONUNBUFFERED=1
 ENV WATCH_DIRECTORY=/app/data
+ENV PORT=8080
 
 # Run the application
 CMD ["python", "web_viewer.py"]
